apps/demo-app/base/service.yaml
# base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
